remove fixed vp on mobile

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1324,13 +1324,13 @@ body {
    }
 }
 .page-plug {
-   @media (min-height: 700px) and (max-width: 991.98px) {
-      position: fixed;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      min-height: unset;
+   @media (min-height: 650px) and (max-width: 991.98px) {
+      // position: fixed;
+      // top: 0;
+      // left: 0;
+      // bottom: 0;
+      // right: 0;
+      // min-height: unset;
    }
 }
 .plug {
